--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 google-cloud-automl>=0.1.2
+httplib2==0.20.2
 tensorflow==1.13.1
-jupyter
+jupyter==1.0.0
+datalab==1.2.0
+notebook==5.7.13
 apache-beam==2.2.0
-ipdb
+ipdb==0.13.9
+ipykernel==4.10.1
 lifetimes==0.9.0.0
 google-api-python-client==1.7.3
 google-cloud-bigquery==0.32.0
 seaborn==0.8.1
 pandas-gbq==0.5.0
 matplotlib==2.2.3
+rsa==3.1.4
